--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					</div>
 					<div class="sw-nav-cta">
 						<ul class="sw-menu-sw-set">
-							<li><a href="https://amzn.to/4goll0N" class="sw-btn sw-btn-1 head-btn"><span class="btn-innner"> GET AMZON LINK </span> </a> </li>
+							<li><a href="https://amzn.to/4goll0N" class="sw-btn sw-btn-1 head-btn"><span class="btn-innner"> GET AMAZON LINK </span> </a> </li>
 							<li class="sidebarmenuicon"><a href=https://amzn.to/4goll0N" data-bs-toggle="offcanvas" data-bs-target="#offcanvasmenu-sw" aria-controls="offcanvasmenu-sw" class="menucions"><span></span></a></li>
 						</ul>
 					</div>
