--- a/index.html
+++ b/index.html
@@ -354,15 +354,13 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         </div>
 		    		</div>
 		
-	<nav class="eltdf-mobile-nav" role="navigation" aria-label="Mobile Menu">
+		<nav class="eltdf-mobile-nav" role="navigation" aria-label="Mobile Menu">
 		<div class="eltdf-grid">
 			<ul id="menu-marassi-menu-1" class=""><li id="mobile-menu-item-4632" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2470 current_page_item eltdf-active-item"><a href="index.html" class=" current "><span>Accueil</span></a></li>
 <li id="mobile-menu-item-4633" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="about/index.html" class=""><span>À propos</span></a></li>
-<li id="mobile-menu-item-5811" class="menu-item menu-item-type-custom menu-item-object-custom "><a href="menu/index.html" class=""><span>Menu</span></a></li>
-<li id="mobile-menu-item-4638" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="gallery/index.html" class=""><span>Galerie</span></a></li>
-<li id="mobile-menu-item-4636" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="contact/index.html" class=""><span>Contact</span></a></li>
-<li id="mobile-menu-item-5822" class="menu-item menu-item-type-custom menu-item-object-custom "><a href="https://www.instagram.com/marassimaroc/" class=""><span>Marassi sur Instagram</span></a></li>
-</ul>		</div>
+<li id="mobile-menu-item-5811" class="menu-item menu-item-type-custom menu-item-object-custom "><a href="moods/index.html" class=""><span>Menu</span></a></li>
+<li id="mobile-menu-item-4638" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="moods/index.html" class=""><span>Galerie</span></a></li>
+  </ul>		</div>
 	</nav>
 
 	</div>
