--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 					 --><div class="eltdf-position-center-inner">
 								
 	<nav class="eltdf-main-menu eltdf-drop-down eltdf-default-nav">
-		<ul id="menu-marassi-menu" class="clearfix"><li id="nav-menu-item-4632" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2470 current_page_item eltdf-active-item narrow"><a href="index.html" class=" current "><span class="item_outer"><span class="menu_icon_wrapper"><i class="menu_icon fab fa-discord fa"></i></span><span class="item_text">Accueil</span></span></a></li>
+		<ul id="menu-marassi-menu" class="clearfix"><li id="nav-menu-item-4632" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2470 current_page_item eltdf-active-item narrow"><a href="index.html" class=" current "><span class="item_outer"><span class="menu_icon_wrapper"> </span><span class="item_text">Accueil</span></span></a></li>
 <li id="nav-menu-item-4633" class="menu-item menu-item-type-post_type menu-item-object-page  narrow"><a href="moods/index.html" class=""><span class="item_outer"><span class="item_text">À propos</span></span></a></li>
 <li id="nav-menu-item-5811" class="menu-item menu-item-type-custom menu-item-object-custom  narrow"><a href="menu/index.html" class=""><span class="item_outer"><span class="item_text">Menu</span></span></a></li>
 <li id="nav-menu-item-4638" class="menu-item menu-item-type-post_type menu-item-object-page  narrow"><a href="moods/index.html" class=""><span class="item_outer"><span class="item_text">Galerie</span></span></a></li>
